# solar-eclipse-1

./: install_solar
8.5.1-beta/: CMakeLists.txt
8.5.1-beta/include/: solar_mle_setup.h
8.5.1-beta/libsolar-c/: CMakeLists.txt  cpedifromsnps.c
8.5.1-beta/libsolar-cc/: CMakeLists.txt  fphi.cc  gwas.cc  simqtl.cc  solar_mle_setup.cc
include/: RicUtil.h  RicVolumeSet.h
libsolar-cc/: pedifromsnps.cc  solar.cc  sporadic.cc
libsolar-fortran/: CMakeLists.txt
solar-eclipse/: CMakeLists.txt  README
solar-eclipse/include/: solar-trait-reader.h
solar-eclipse/libsolar-c/: CMakeLists.txt
solar-eclipse/libsolar-cc/: CMakeLists.txt  gwas.cc  nifti_to_csv.cc  solar-trait-reader.cc  sporadic.cc
